Genel yapı inşa edildi.

--- a/Services/Catolog/Services.Catolog/appsettings.json
+++ b/Services/Catolog/Services.Catolog/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "DatabaseSetting": {
+    "CategoryCollectionName": "Categories",
+    "CourseCollectionName": "Courses",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CatalogDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
