--- a/Services/Discount/Services.Discount/appsettings.json
+++ b/Services/Discount/Services.Discount/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSql": ""
+    "PostgreSql": "User ID=root; Password=123123123; Server=localhost; Port=5432; Database=discountdb; Integrated Security=true; Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
