--- a/Services/Order/Services.Order.Domain/Services.Order.Domain.csproj
+++ b/Services/Order/Services.Order.Domain/Services.Order.Domain.csproj
@@ -1,10 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Services.Order.Domain.Core\Services.Order.Domain.Core.csproj" />
