Order servis geliştirildi.

--- a/Services/Order/Services.Order.API/appsettings.json
+++ b/Services/Order/Services.Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1433; Database=orderdb; User=sa; Password=123123123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
