Payment servis oluşturuldu.

--- a/Services/Order/Services.Order.API/appsettings.json
+++ b/Services/Order/Services.Order.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433; Database=orderdb; User=sa; Password=123123123;"
+    "SqlServer": "Server=localhost,1433; Database=orderdb; User=sa; Password=123123123; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
