Auth servisi geliştirildi.

--- a/Services/Auth/Services.Auth/appsettings.json
+++ b/Services/Auth/Services.Auth/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1444; Database=authdb; User=sa; Password=123123123; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
