--- a/Gateway/Gateway/Gateway.csproj
+++ b/Gateway/Gateway/Gateway.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
     <PackageReference Include="Ocelot" Version="18.0.0" />
   </ItemGroup>
 
