--- a/Services/Auth/Services.Auth/appsettings.json
+++ b/Services/Auth/Services.Auth/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "SqlServer": "Server=localhost,1444; Database=authdb; User=sa; Password=123123123; TrustServerCertificate=True"
   },
+  "AppSettings": {
+    "JwtToken": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
