Authorize işlemleri yapıldı.

--- a/Gateway/Gateway/appsettings.json
+++ b/Gateway/Gateway/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "JwtToken": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
