--- a/Services/Basket/Services.Basket/appsettings.json
+++ b/Services/Basket/Services.Basket/appsettings.json
@@ -1,8 +1,10 @@
 {
   "RedisSettings": {
     "Host": "localhost",
-    "Port": 6379,
-
+    "Port": 6379
+  },
+  "AppSettings": {
+    "JwtToken": "my top secret key"
   },
   "Logging": {
     "LogLevel": {
