--- a/Services/Discount/Services.Discount/appsettings.json
+++ b/Services/Discount/Services.Discount/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "PostgreSql": "User ID=root; Password=123123123; Server=localhost; Port=5432; Database=discountdb; Integrated Security=true; Pooling=true;"
   },
+  "AppSettings": {
+    "JwtToken": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
