--- a/Services/Order/Services.Order.API/appsettings.json
+++ b/Services/Order/Services.Order.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "SqlServer": "Server=localhost,1433; Database=orderdb; User=sa; Password=123123123; TrustServerCertificate=True"
   },
+  "AppSettings": {
+    "JwtToken": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
