--- a/Services/Payment/Services.Payment/appsettings.json
+++ b/Services/Payment/Services.Payment/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "JwtToken": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
