RabbitMQ dahil edildi.

--- a/Services/Payment/Services.Payment/appsettings.json
+++ b/Services/Payment/Services.Payment/appsettings.json
@@ -2,6 +2,11 @@
   "AppSettings": {
     "JwtToken": "my top secret key"
   },
+  "RabbitMQ": {
+    "Url": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
