--- a/Services/Order/Services.Order.API/appsettings.json
+++ b/Services/Order/Services.Order.API/appsettings.json
@@ -5,6 +5,11 @@
   "AppSettings": {
     "JwtToken": "my top secret key"
   },
+  "RabbitMQ": {
+    "Url": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
