RabbitMQ ile event oluşturma yapıldı. docker-compose dosyası yazıldı.

--- a/Services/Catolog/Services.Catolog/appsettings.json
+++ b/Services/Catolog/Services.Catolog/appsettings.json
@@ -5,6 +5,11 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDb"
   },
+  "RabbitMQ": {
+    "Url": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
