--- a/Services/Catolog/Services.Catolog/Properties/launchSettings.json
+++ b/Services/Catolog/Services.Catolog/Properties/launchSettings.json
@@ -37,6 +37,7 @@
         "ASPNETCORE_URLS": "https://localhost:7287;http://localhost:5279"
       },
       "distributionName": ""
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
